<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_2d</name>
  <version>0.0.0</version>
  <description>A 2D grid-based FastSLAM implementation</description>
  <maintainer email="gerikzatorski@users.noreply.github.com">Gerik Zatorski</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_srvs</depend>

  <!-- TODO: just for launch file example -->
  <exec_depend>wheelybot_sim</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
