<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wheelybot_sim</name>
  <version>0.0.0</version>
  <description>Gazebo integration for wheelybot</description>
  <maintainer email="gerikzatorski@users.noreply.github.com">gerik</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>wheelybot_description</depend>
  <depend>wheelybot_control</depend>
  <depend>gazebo_ros</depend>
  <depend>rviz</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
